Added download link.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li class="pure-menu-item" class="pure-menu-item">
                     <a href="https://github.com/rocknsm" class="pure-menu-link"><i class="fa fa-github fa-sm" aria-hidden="true"></i> Github</a>
                 </li>
-
+		<li class="pure-menu-item" class="pure-menu-item"><a href="https://github.com/rocknsm/rock/releases" class="pure-menu-link"><i class="fa fa-download fa-sm" aria-hidden="true"></i> Download</a></li>
                 <li class="pure-menu-item"><a href="mailto:info@rocknsm.io" class="pure-menu-link"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> Contact</a></li>
             </ul>
         </div>
