Re-order menu. Add twitter.

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
 
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="http://rocknsm.io" class="pure-menu-link"><i class="fa fa-home fa-sm" aria-hidden="true"></i> Home</a></li>
+		<li class="pure-menu-item" class="pure-menu-item"><a href="https://github.com/rocknsm/rock/releases" class="pure-menu-link"><i class="fa fa-download fa-sm" aria-hidden="true"></i> Download</a></li>
                 <li class="pure-menu-item"><a href="https://rocknsm.gitbooks.io/rocknsm-guide/content/" class="pure-menu-link"><i class="fa fa-book fa-sm" aria-hidden="true"></i> Documentation</a></li>
 
                 <li class="pure-menu-item" class="pure-menu-item">
                     <a href="https://github.com/rocknsm" class="pure-menu-link"><i class="fa fa-github fa-sm" aria-hidden="true"></i> Github</a>
                 </li>
-		<li class="pure-menu-item" class="pure-menu-item"><a href="https://github.com/rocknsm/rock/releases" class="pure-menu-link"><i class="fa fa-download fa-sm" aria-hidden="true"></i> Download</a></li>
-                <li class="pure-menu-item"><a href="mailto:info@rocknsm.io" class="pure-menu-link"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> Contact</a></li>
+                <li class="pure-menu-item"><a href="mailto:info@rocknsm.io" class="pure-menu-link"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> Email</a></li>
+		<li class="pure-menu-item" class="pure-menu-item"><a href="https://twitter.com/rocknsm/" class="pure-menu-link"><i class="fa fa-twitter fa-sm" aria-hidden="true"></i> Twitter</a></li>
             </ul>
         </div>
     </div>
