Add FSF to feature list.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ Reliable data storage and indexing (Elasticsearch) to support rapid retrieval an
             <li><i class="fa-li fa fa-check-square"></i><strong>Full Packet Capture</strong> via <a href="https://github.com/google/stenographer" target="_blank">Google Stenographer</a>.</li>
             <li><i class="fa-li fa fa-check-square"></i><strong>Protocol Analysis and Metadata</strong> via <a href="http://bro.org/" target="_blank">Bro</a>.</li>
             <li><i class="fa-li fa fa-check-square"></i><strong>Signature Based Alerting</strong> via <a href="https://suricata-ids.org/" target="_blank">Suricata</a> or <a href="http://snort.org/" target="_blank">Snort</a>.</li>
+            <li><i class="fa-li fa fa-check-square"></i><strong>Recursive File Scanning</strong> via <a href="https://github.com/EmersonElectricCo/fsf" target="_blank">FSF</a>.</li>
             <li><i class="fa-li fa fa-check-square"></i><strong>Message Queuing and Distribution</strong> via <a href="http://kafka.apache.org/" target="_blank">Apache Kafka</a>.</li>
             <li><i class="fa-li fa fa-check-square"></i><strong>Message Transport</strong> via <a href="https://www.elastic.co/products/logstash" target="_blank">Logstash</a>.</li>
             <li><i class="fa-li fa fa-check-square"></i><strong>Data Storage, Indexing, and Search</strong> via <a href="https://www.elastic.co/" target="_blank">Elasticsearch</a>.</li>
